[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scipts/Game.gd" type="Script" id=1]
[ext_resource path="res://Game Assets/UI.png" type="Texture" id=2]
[ext_resource path="res://fonts/RetroBoundUC.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Game Assets/Biodiesel.png" type="Texture" id=4]
[ext_resource path="res://newPipes.tres" type="TileSet" id=5]
[ext_resource path="res://Enemy(Fast).tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemy(Medium).tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemy(Slow).tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://City.tres" type="SpriteFrames" id=10]
[ext_resource path="res://cloud.png" type="Texture" id=11]
[ext_resource path="res://Audio Files/nextlevel music.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Stage 0" type="Node2D"]
script = ExtResource( 1 )
number_of_oil_needed = 4
number_of_seconds_per_game = 180
ui_label_timer_path = NodePath("UI/Time")
ui_label_oilCollected_path = NodePath("UI/Oil")
ui_label_bulletsLeft_path = NodePath("UI/Bullet")
nextScenePath = "Stage1.tscn"

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="TextureRect" parent="UI"]
margin_left = 1289.0
margin_top = 3.0
margin_right = 1685.0
margin_bottom = 960.0
texture = ExtResource( 2 )

[node name="Timer" type="Label" parent="UI"]
margin_left = 1325.61
margin_top = 35.0
margin_right = 1503.61
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "Time left:"

[node name="Time" type="Label" parent="UI"]
margin_left = 1515.44
margin_top = 32.2419
margin_right = 1582.44
margin_bottom = 70.2419
custom_fonts/font = SubResource( 2 )

[node name="Oil Collected" type="Label" parent="UI"]
margin_left = 1320.34
margin_top = 90.0
margin_right = 1556.34
margin_bottom = 128.0
custom_fonts/font = SubResource( 3 )
text = "Oil Collected:"

[node name="Oil" type="Label" parent="UI"]
margin_left = 1575.68
margin_top = 92.2419
margin_right = 1615.68
margin_bottom = 130.242
custom_fonts/font = SubResource( 4 )

[node name="Bullets Left" type="Label" parent="UI"]
margin_left = 1322.1
margin_top = 156.702
margin_right = 1540.1
margin_bottom = 194.702
custom_fonts/font = SubResource( 5 )
text = "Bullets Left:"

[node name="Bullet" type="Label" parent="UI"]
margin_left = 1560.68
margin_top = 158.758
margin_right = 1600.68
margin_bottom = 196.758
custom_fonts/font = SubResource( 6 )

[node name="BiodieselBar" type="TextureProgress" parent="UI"]
margin_left = 1397.56
margin_top = 473.972
margin_right = 1557.56
margin_bottom = 713.972
texture_progress = ExtResource( 4 )
fill_mode = 3

[node name="Pipes" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
format = 1
tile_data = PoolIntArray( 0, -4251249, 0, 262144, 3, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 4, 0, 327680, 7, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 9, 0, 393216, 7, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 9, 0, 458752, 7, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 9, 0, 524288, 7, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 9, 0, 589824, 7, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 9, 0, 655360, 7, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 9, 0, 720896, 7, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 9, 0, 786432, 7, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 9, 0, 851968, 7, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 9, 0, 917504, 2, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 5, 0 )

[node name="Enemy(Fast)2" parent="Pipes" instance=ExtResource( 6 )]
position = Vector2( 481.621, 608.963 )
scale = Vector2( 2, 1.5 )

[node name="Enemy(Fast)" parent="Pipes" instance=ExtResource( 6 )]
position = Vector2( 563.661, 916.423 )
scale = Vector2( 2, 1.5 )

[node name="Enemy(Medium)" parent="Pipes" instance=ExtResource( 7 )]
position = Vector2( 825.513, 419.021 )
scale = Vector2( 1.125, 1.125 )

[node name="Enemy(Slow)" parent="Pipes" instance=ExtResource( 8 )]
position = Vector2( 1117.02, 551.065 )
scale = Vector2( 1.125, 1.125 )

[node name="Player" parent="Pipes" instance=ExtResource( 9 )]
position = Vector2( 46.7259, 288.461 )

[node name="City" type="ParallaxBackground" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="City"]
position = Vector2( 645.264, 126.316 )
scale = Vector2( 1.00329, 1.04386 )
frames = ExtResource( 10 )

[node name="Cloud" type="ParallaxBackground" parent="City/AnimatedSprite"]

[node name="Sprite" type="Sprite" parent="City/AnimatedSprite/Cloud"]
position = Vector2( 645.218, 122.187 )
scale = Vector2( 20.1285, 7.70435 )
texture = ExtResource( 11 )

[node name="GameTimer" type="Timer" parent="."]

[node name="VictoryTimer" type="Timer" parent="."]

[node name="VictoryMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="VictoryTimer" to="." method="_on_VictoryTimer_timeout"]
